Adicionado tipo de dados

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "raiony/treinamento",
     "description": "Treinamento Net On",
+    "type": "project",
     "minimum-stability": "dev",
     "authors": [
         {
